--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,10 @@
         indicators: true
       });
     });
+    document.addEventListener('DOMContentLoaded', function () {
+      var elems = document.querySelectorAll('.dropdown-trigger');
+      var instances = M.Dropdown.init(elems, {});
+    });
   </script>
 </body>
 
